--- a/Componentes/componentes.html
+++ b/Componentes/componentes.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    
+
 
     <div class="container">
         <h2>Alertas</h2>
@@ -30,9 +30,143 @@
             <div class="col-6 alert alert-dark">Alerta - div.alert alert-dark</div>
         </div>
 
+        <br>
+        <br>
+
         <h2>Botões</h2>
+        <div class="row">
+            <button class="col-6 btn btn-primary">btn btn-primary</button>
+            <button class="col-6 btn btn-secondary">btn btn-secondary</button>
+            <button class="col-6 btn btn-success">btn btn-success</button>
+            <button class="col-6 btn btn-danger">btn btn-danger</button>
+            <button class="col-6 btn btn-warning">btn btn-warning</button>
+            <button class="col-6 btn btn-info">btn btn-info</button>
+            <button class="col-6 btn btn-light">btn btn-light</button>
+            <button class="col-6 btn btn-dark">btn btn-dark</button>
+        </div>
 
+        <br>
+        <br>
 
+        <div class="row">
+            <div class="col-6 btn btn-outline-primary">btn btn-outline-primary</div>
+            <div class="col-6 btn btn-outline-secondary">btn btn-outline-secondary</div>
+            <div class="col-6 btn btn-outline-success">btn btn-outline-success</div>
+            <div class="col-6 btn btn-outline-danger">btn btn-outline-danger</div>
+            <div class="col-6 btn btn-outline-warning">btn btn-outline-warning</div>
+            <div class="col-6 btn btn-outline-info">btn btn-outline-info</div>
+            <div class="col-6 btn btn-outline-light">btn btn-outline-light</div>
+            <div class="col-6 btn btn-outline-dark">btn btn-outline-dark</div>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="row">
+            <div class="btn btn-primary btn-block">btn btn-primary btn-block</div>
+            <div class="btn btn-secondary btn-block">btn btn-secondary btn-block</div>
+            <div class="btn btn-success btn-block">btn btn-success btn-block</div>
+            <div class="btn btn-danger btn-block">btn btn-danger btn-block</div>
+            <div class="btn btn-warning btn-block">btn btn-warning btn-block</div>
+            <div class="btn btn-info btn-block">btn btn-info btn-block</div>
+            <div class="btn btn-light btn-block">btn btn-light btn-block</div>
+            <div class="btn btn-dark btn-block">btn btn-dark btn-block</div>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="row">
+            <div class="col">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label for="option1" class="btn btn-secondary active">
+                        <input type="radio" name="options" id="options1"> 1
+                    </label>
+
+                    <label for="option2" class="btn btn-secondary">
+                        <input type="radio" name="options" id="options2"> 2
+                    </label>
+
+                    <label for="option3" class="btn btn-secondary">
+                        <input type="radio" name="options" id="options3"> 3
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        <br>
+        <br>
+
+        <h2>Badges</h2>
+
+        <h6>Usado em tag H$ <span class="badge bg-primary">badge bg-primary</span></h6>
+        <h6>Usado em tag H$ <span class="badge bg-secondary">badge bg-secondary</span></h6>
+        <h6>Usado em tag H$ <span class="badge bg-success">badge bg-success</span></h6>
+        <h6>Usado em tag H$ <span class="badge bg-danger">badge bg-danger</span></h6>
+        <h6>Usado em tag H$ <span class="badge bg-warning">badge bg-warning</span></h6>
+        <h6>Usado em tag H$ <span class="badge bg-info">badge bg-info</span></h6>
+        <h6>Usado em tag H$ <span class="badge bg-light">badge bg-light</span></h6>
+        <h6>Usado em tag H$ <span class="badge bg-dark">badge bg-dark</span></h6>
+
+        <br>
+        <br>
+
+        <h2>Listas</h2>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-primary">list-group-item list-group-item-primary</li>
+            <li class="list-group-item list-group-item-secondary ">list-group-item active list-group-item-secondary</li>
+            <li class="list-group-item list-group-item-success">list-group-item list-group-item-success</li>
+            <li class="list-group-item list-group-item-danger">list-group-item list-group-item-danger</li>
+            <li class="list-group-item list-group-item-warning">list-group-item list-group-item-warning</li>
+            <li class="list-group-item list-group-item-info">list-group-item list-group-item-info</li>
+            <li class="list-group-item list-group-item-light">list-group-item list-group-item-light</li>
+            <li class="list-group-item list-group-item-dark">list-group-item list-group-item-dark</li>
+        </ul>
+
+        <br>
+        <br>
+
+        <ul class="list-group">
+            <a href="" class="list-group-item list-group-item-action active">link - list-group-item
+                list-group-item-action active</a>
+            <a href="" class="list-group-item list-group-item-action">link - list-group-item list-group-item-action </a>
+            <a href="" class="list-group-item list-group-item-action">link - list-group-item list-group-item-action </a>
+            <a href="" class="list-group-item list-group-item-action">link - list-group-item list-group-item-action </a>
+            <a href="" class="list-group-item list-group-item-action">link - list-group-item list-group-item-action </a>
+        </ul>
+
+        <br>
+        <br>
+
+        <ul class="list-group">
+                <button class="list-group-item list-group-item-action">button -> list-group-item list-group-item-action</button>
+                <button class="list-group-item list-group-item-action">button -> list-group-item list-group-item-action</button>
+                <button class="list-group-item list-group-item-action">button -> list-group-item list-group-item-action</button>
+                <button class="list-group-item list-group-item-action">button -> list-group-item list-group-item-action</button>
+                <button class="list-group-item list-group-item-action">button -> list-group-item list-group-item-action</button>
+        </ul>
+
+        <br>
+        <br>
+        
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Sem borda -> classe ul  list-group-flush</li>
+            <li class="list-group-item">Sem borda -> classe ul  list-group-flush</li>
+            <li class="list-group-item">Sem borda -> classe ul  list-group-flush</li>
+            <li class="list-group-item">Sem borda -> classe ul  list-group-flush</li>
+            <li class="list-group-item">Sem borda -> classe ul  list-group-flush</li>
+        </ul>
+
+        <br>
+        <br>
+
+        <ul class="list-group list-group-flush list-group-horizontal-sm">
+            <li class="list-group-item">1</li>
+            <li class="list-group-item">2</li>
+            <li class="list-group-item">3</li>
+            <li class="list-group-item">4</li>
+            <li class="list-group-item">5</li>
+        </ul>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
